<resources>
    <string name="app_name">Converter</string>
    <string name="kz">Тенге, Казахстан</string>
    <string name="title">Converter</string>
    <string name="buttonText">Добавить</string>
    <string name="inputHint">5000</string>
    <string name="toolbar_title_delete">Item selected</string>
    <string name="toolbar_title_search">Search</string>
    <string name="toolbar_title_account">Личная страница</string>
    <string name="toolbar_title_news">Qyzyqty kontent</string>
    <string name="dialog_button_text1">Отмена</string>
    <string name="dialog_button_text2">Удалить</string>
    <string name="menu_sort_title">Сортировать по</string>
    <string name="menu_sort_aplha">Алфавиту</string>
    <string name="menu_sort_value">Стоимости</string>
    <string name="menu_sort_cancel">Сбросить сортировку</string>
    <string name="bottom_sheet_choose_currency">Название валюты</string>
    <string name="bottom_sheet_write_value">Кол. тенге</string>
    <string name="bottom_sheet_choose_flag">Выбрать флаг</string>
    <string name="search_currency">Поиск валюты</string>
    <string name="add_bottom_sheet">Добавить валюту</string>
    <string name="name">Томирис Сұраншы</string>
    <string name="email">tomiris.suranshy@gmail.com</string>
    <string name="button_share">Поделиться</string>
    <string name="button_email">Отправить по почте</string>
    <string name="button_call">Позвонить</string>
    <string name="button_camera">Запустить камеру</string>
    <string name="phone">+77073179079</string>
    <string name="numberOfConvertations">Кол конвертаций:</string>
    <string name="timeSpend">Проведенное время:</string>
    <string name="news_search">Izdey</string>
    <string name="shared_text">My name: %1$s, email: %2$s and phone: %3$s</string>
    <string name="share_chooser_title">Share</string>
    <string name="email_subject">My contacts</string>
    <string name="email_chooser_title">Send email</string>
</resources>