<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_sort"
        android:title="@string/menu_sort_title">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_alphabetic"
                    android:title="@string/menu_sort_aplha" />
                <item
                    android:id="@+id/menu_sort_cost"
                    android:title="@string/menu_sort_value" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_sort_cancel"
        android:title="@string/menu_sort_cancel">
    </item>

    <item
        android:id="@+id/menu_delete_icon"
        android:icon="@android:drawable/ic_menu_delete"
        android:title=""
        app:showAsAction="always">
    </item>
</menu>