<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_share"
        style="@style/button_action_style"
        android:layout_marginTop="18dp"
        android:text="@string/button_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_email"
        style="@style/button_action_style"
        android:layout_marginTop="10dp"
        android:text="@string/button_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_share" />

    <Button
        android:id="@+id/button_call"
        style="@style/button_action_style"
        android:layout_marginTop="10dp"
        android:text="@string/button_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_email" />

    <Button
        android:id="@+id/button_camera"
        style="@style/button_action_style"
        android:layout_marginTop="10dp"
        android:text="@string/button_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_call" />

</androidx.constraintlayout.widget.ConstraintLayout>