<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text2"
        style="@style/title_text_style"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:text="@string/text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="95dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/stroke" />

    <androidx.cardview.widget.CardView
        android:id="@+id/img"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="135dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name"
        style="@style/info_style"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <TextView
        android:id="@+id/email"
        style="@style/info_style"
        android:layout_marginTop="7dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/button_share"
        style="@style/button_action_style"
        android:layout_marginTop="15dp"
        android:text="@string/button_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"/>

    <Button
        android:id="@+id/button_email"
        style="@style/button_action_style"
        android:layout_marginTop="1dp"
        android:text="@string/button_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_share"/>

    <Button
        android:id="@+id/button_call"
        style="@style/button_action_style"
        android:layout_marginTop="1dp"
        android:text="@string/button_call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_email"/>

    <Button
        android:id="@+id/button_camera"
        style="@style/button_action_style"
        android:layout_marginTop="1dp"
        android:text="@string/button_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_call"/>
</androidx.constraintlayout.widget.ConstraintLayout>