<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title"
        app:titleTextAppearance="@style/title"
        app:titleTextColor="@color/text_title" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="75dp"
        android:background="@color/label"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tengeTextField"
        style="@style/material_edit_text"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/kz"
        app:layout_constraintEnd_toStartOf="@+id/card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputValue"
            style="@style/value_text_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textColorHint="@drawable/hint_selector" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/cardView"
        app:layout_constraintBottom_toBottomOf="@+id/tengeTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tengeTextField"
        card_view:cardCornerRadius="6dp">

        <ImageView
            android:id="@+id/kzImageView"
            android:layout_width="52dp"
            android:layout_height="28.55dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/kz"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/currencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/kz"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/tengeTextField" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/tengeTextField" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/recOfButton"
            android:layout_width="169dp"
            android:layout_height="52dp"
            android:background="@drawable/rectangle_background_6radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/plus_sign"
            android:layout_width="35dp"
            android:layout_height="29dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/plus_sign"
            app:layout_constraintStart_toStartOf="@+id/recOfButton"
            app:layout_constraintTop_toTopOf="@+id/recOfButton" />

        <TextView
            android:id="@+id/buttonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="10dp"
            android:text="@string/buttonText"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/recOfButton"
            app:layout_constraintTop_toTopOf="@+id/recOfButton" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="recOfButton,plus_sign,buttonText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>